styles/globals.css
@media screen and (max-width: 576px) {
  html {
    font-size: 11px;
  }
}
@media screen and (min-width: 576px) {
  html {
    font-size: 11px;
  }
}
@media screen and (min-width: 768px) {
  html {
    font-size: 12px;
  }
}
@media screen and (min-width: 992px) {
  html {
    font-size: 13px;
  }
}
@media screen and (min-width: 1200px) {
  html {
    font-size: 13px;
  }
}
@media screen and (min-width: 1920px) {
  html {
    font-size: 16px;
  }
}

@font-face {
  font-family: "Montserrat";
  src: url("../public/assets/fonts/montserrat-v18-latin-regular.ttf")
      format("ttf"),
    url("../public/assets/fonts/montserrat-v18-latin-regular.eot") format("eot"),
    url("../public/assets/fonts/montserrat-v18-latin-regular.woff")
      format("woff"),
    url("../public/assets/fonts/montserrat-v18-latin-regular.woff2")
      format("woff2");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  unicode-range: U+000-5FF;
}

@font-face {
  font-family: "IranSans";
  src: url("../public/assets/fonts/IRANSansWeb.ttf") format("ttf"),
    url("../public/assets/fonts/IRANSansWeb.woff") format("woff"),
    url("../public/assets/fonts/IRANSansWeb.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  unicode-range: U+0500- U+08FF;
}

* {
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style: none;
}

/* * {
  overflow-x: hidden;
} */

*:lang(fa) {
  font-family: IranSans, sans-serif;
}

*:lang(en) {
  font-family: Montserrat, sans-serif;
}

button,
input,
select {
  outline: none;
}

button:focus,
input:focus,
select:focus {
  outline: none;
}

a {
  color: inherit;
  text-decoration: none;
}

p {
  font-size: 1.125rem;
  line-height: 2rem;
  color: var(--p-color);
}

* {
  box-sizing: border-box;
}

:root {
  --primary-color: #404e40;
  --secondary-color: #d3b380;
  --tretiary-color: #333335;
  --background-color1: #384341;
  --background-color2: #1b2c28;
  --text-color: #ffffff;
  --p-color: #9ca3a0;
}

.container {
  background-image: radial-gradient(
    var(--background-color1),
    var(--background-color2)
  );
  color: var(--text-color);
}

.card {
  padding: 5rem 1.5rem;
}

@media screen and (min-width: 576px) {
  .card {
    padding: 5rem 5rem;
  }
}

.normalBtn {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 1.5rem 2rem;
  background: var(--secondary-color);
  border-radius: 3.1rem;
  font-size: 1.125rem;
  cursor: pointer;
  margin-top: 1.5rem;
}

.outlineBtn {
  border: 0.1rem solid var(--secondary-color);
  background-color: transparent;
  color: var(--secondary-color);
  border-radius: 3.1rem;
  padding: 1.5rem 2rem;
}

.selectLng {
  position: absolute;
  top: 1.5rem;
  right: 5rem;
  appearance: none;
  padding: 10px;
  width: 1.5rem;
  background: transparent;
  background-image: url("../public/assets/images/global.svg");
  background-repeat: no-repeat;
  border: none;
  z-index: 1;
  cursor: pointer;
}

/* -------header------- */

.headerBackground {
  position: absolute;
  top: 0;
  right: 0;
  max-width: 50rem;
}

.imageWrapper {
  width: 2rem;
  display: flex;
  align-items: center;
}

.titleBox {
  position: relative;
  display: flex;
  align-items: center;
  z-index: 2;
  margin-top: 1rem;
  justify-content: center;
}

.titleBox > h4 {
  font-size: 1.3rem;
}

@media screen and (min-width: 576px) {
  .titleBox {
    justify-content: start;
  }
}

.introBox {
  margin: 10rem 0 7rem 0;
  position: relative;
  z-index: 2;
}

.introBox > h1 {
  font-size: 5rem;
}

@media screen and (min-width: 576px) {
  .introBox {
    margin: 18rem 0;
  }
}

.buttonBox {
  display: flex;
  margin-top: 1rem;
  flex-direction: column;
}

@media screen and (min-width: 576px) {
  .buttonBox {
    flex-direction: row;
  }
}

.space {
  width: 2rem;
}

.intro {
  max-width: 40rem;
  display: flex;
  flex-wrap: wrap;
}

/* -------main------- */

.services {
  position: relative;
  background-image: url("../public/assets/images/mainBackground.svg");
  background-color: #37413f;
}

.services > .card {
  z-index: 1;
}

.servicesTitle {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.servicesTitle > h3 {
  font-size: 1.5rem;
}

.listBox {
  margin: 2rem 0;
  display: flex;
  justify-content: center;
  overflow-y: hidden;
}

.list {
  display: grid;
  grid-template-columns: repeat(2, minmax(10rem, 15rem));
  max-width: 60rem;
  row-gap: 5rem;
}

@media screen and (min-width: 576px) {
  .list {
    grid-template-columns: repeat(4, minmax(10rem, 15rem));
  }
}

.list > li {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 1.125rem;
}

.list > li > strong {
  margin-top: 1rem;
}

.sloganBox {
  display: flex;
  justify-content: center;
  overflow-x: hidden;
}

.slogan {
  display: grid;
  align-items: center;
  max-width: 55rem;
  grid-template-columns: 1fr;
  margin: 7rem 0.5rem;

}

@media screen and (min-width: 576px) {
  .slogan {
    grid-template-columns: 1fr 1.5fr;
  }
}

.slogan > h1 {
  padding: 1rem;
  font-size: 5rem;
  color: var(--secondary-color);
}

.slogan > p {
  padding: 1rem;
}

/* ----------seperator---------- */

.seperator {
  margin: auto;
  width: 25rem;
  height: 0.1rem;
  background-color: white;
  opacity: 0.2;
}

/* -----------footer---------- */
.footer {
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
}

.contactBox {
  position: relative;
  z-index: 1;
}

.contact {
  color: var(--secondary-color);
  font-size: 3.125rem;
  grid-column: 1/2;
  position: relative;
  z-index: 1;
  margin: 7rem 1.5rem 0 1.5rem;
}

.contactDetail {
  grid-column: 1/2;
  position: relative;
  z-index: 1;
  margin: 1.5rem;
}

.copyRight {
  display: none;
}

@media screen and (max-width: 576px) {
  .topFooterBackgroundEn {
    transform: translateY(-50%);
    position: absolute;
    right: 0;
  }
  .topFooterBackgroundFa {
    position: absolute;
    transform: rotateY(180deg) translateY(-50%);
    left: 0;
  }
}
.bottomFooterBackground {
  justify-self: start;
}

@media screen and (min-width: 576px) {
  .bottomFooterBackground,
  .topFooterBackgroundFa,
  .topFooterBackgroundEn {
    position: absolute;
    bottom: 0;
  }
  .topFooterBackgroundFa {
    left: 0;
    transform: rotateY(180deg);
  }
  .topFooterBackgroundEn {
    right: 0;
    z-index: 1;
  }
  .footer {
    grid-template-columns: repeat(7, 1fr);
    justify-items: start;
  }

  .contact {
    grid-column: 4/7;
  }

  .contactDetail {
    grid-column: 4/8;
    margin: 1rem 1rem 7rem 1rem;
  }

  .copyRight {
    display: block;
    grid-column: 5/8;
    font-size: 1rem;
    opacity: 0.2;
    direction: ltr;
    z-index: 1;
  }
}

@media screen and (min-width: 768px) {
  .contact {
    grid-column: 4/6;
  }
}

/* -----locale dependent------- */

.reverseLeft {
  transform: rotateY(180deg);
  left: 0;
}

.reverseRight {
  transform: rotateY(180deg);
}

/* -----geometries------- */
.scene {
  position: absolute;
  background-color: transparent;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
}

.scene > canvas {
  position: absolute;
  right: 0;
  width: 100%;
  overflow-y: hidden;
}

/* -----animation------- */

.fade {
  opacity: 0;
}

.fade.appear {
  opacity: 1;
  transition: opacity 800ms ease-in-out;
}

.right {
  opacity: 0;
  transform: translateX(50%);
}

.left {
  opacity: 0;
  transform: translateX(-50%);
}

.left.appear,
.right.appear {
  transform: translateX(0);
  opacity: 1;
  transition: transform 800ms, opacity 800ms ease-in;
  transition-timing-function: cubic-bezier(0, 0.2, 0.3, 1);
}

.bottom {
  transform: translateY(50px);
  opacity: 0;
}

.bottom.appear {
  transform: translateY(0px);
  opacity: 1;
  transition: transform 800ms ease-out, opacity 800ms ease-in-out;
}

.transition-delay-long {
  transition-delay: 1500ms;
}
.transition-delay-short {
  transition-delay: 4000ms;
}

